--- a/views/layouts/editor.handlebars
+++ b/views/layouts/editor.handlebars
@@ -41,7 +41,7 @@
     <script type="text/javascript" src="/node_modules/moment/min/moment.min.js"></script>
 
     <script type="text/javascript" src="/vendor/webgl-debug.js"></script>
-
+    
     <script type="text/javascript" src="/scripts/event-emitter.js"></script>
 
     <script type="text/javascript" src="/scripts/core.js"></script>
@@ -168,6 +168,9 @@
 
     <script type="text/javascript" src="/vendor/borismus/webvr-polyfill.js"></script>
     <script type="text/javascript" src="/vendor/borismus/webvr-manager.js"></script>
+
+    <script type="text/javascript" src="/vendor/borismus/ray-input.js"></script>
+
 	<script type="text/javascript" src="/scripts/hardware.js"></script>
     <script type="text/javascript" src="/scripts/webVRAdapter.js"></script>
 
