--- a/views/layouts/player.handlebars
+++ b/views/layouts/player.handlebars
@@ -58,6 +58,9 @@
 
         <script src="/data/dist/{{playerVersion}}/player.min.js"></script>
 
+        <script src="/vendor/three/three.js"></script>
+        <script src="/vendor/borismus/ray-input.js"></script>
+
         <script>
         (function(){
             {{{templateCache}}}
